# MiroFish-ES

./: .env.example  .gitignore  DOCKER.md  README-EN.md  README-ES.md  README-ZH.md  README.md  sync-upstream.sh
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  report.py  simulation.py
backend/app/memory/: __init__.py  backend.py  base.py  factory.py  graphiti_backend.py  hf_embedder.py  zep_backend.py  zhipu_llm_client.py
backend/app/models/: __init__.py  project.py  task.py
backend/app/prompts/: __init__.py  config.py  loader.py
backend/app/prompts/templates/oasis/: es.json  zh.json
backend/app/prompts/templates/ontology/: es.json  zh.json
backend/app/prompts/templates/report/: es.json  zh.json
backend/app/prompts/templates/simulation/: es.json  zh.json
backend/app/prompts/templates/zep/: es.json  zh.json
backend/app/services/: __init__.py  graph_builder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py  logger.py  retry.py  zep_paging.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
docker/graphiti/: docker-compose.yml
docs/plans/: 2026-03-17-translation-fix.md
frontend/: index.html  package-lock.json
scripts/: detener.bat  detener.sh  iniciar.bat  iniciar.sh  translate_strings.py
(+19 files in other folders)
